# signalr-rs

./: .gitignore  Cargo.toml
serializer_test/: Cargo.toml
serializer_test/src/: main.rs
signalr-rs/: Cargo.toml
signalr-rs-func-test/: Cargo.toml
signalr-rs-func-test/src/: main.rs
signalr-rs-macro/: Cargo.toml
signalr-rs/src/: lib.rs
signalr-rs/src/error/: mod.rs
signalr-rs/src/protocol/: mod.rs  responses.rs
