[package]
name = "signalr-rs-func-test"
version = "0.1.0"
authors = ["Miguel Pérez García <miguelpg_95@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
signalr-rs = { path = "../signalr-rs" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"]}
tokio-tungstenite = "0.17.2"
serde_json = "*"

[dependencies.futures-util]
default-features = false
features = ["sink", "std"]
version = "0.3"