[package]
name = "signalr-rs"
version = "0.1.0"
authors = ["Miguel Pérez García <miguelpg_95@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.17.2"
reqwest = {version = "0.11.11", features = ["json"]}
serde = {version = "1.0.104", features = ["derive"]}
serde_json = "1.0"